Fix mobile menu overflow

--- a/src/partial-styles/_header.scss
+++ b/src/partial-styles/_header.scss
@@ -128,6 +128,7 @@ header {
           margin-top: 14px;
           margin-bottom: 16px;
           display: block;
+          padding-top: 15px;
 
           .mobile-logo {
             display: block;
